--- a/operations/index.adoc
+++ b/operations/index.adoc
@@ -19,14 +19,15 @@ Ops & No Ops
 [.topic.source]
 == Ops
 
-运维:: 保证产品能够正确无误的运行以支持整体商业目标。
-....
-运行:: 业务部署，配置管理
+运维:: 
+保证产品能够正确无误的运行以支持整体商业目标。
 
-准确无误:: 系统监控，异常检测
+运行::: 业务部署，配置管理
 
-支持商业目标:: 额外的技术保障，可用率、安全、流程规范、响应时间等等
-....
+准确无误::: 系统监控，异常检测
+
+支持商业目标::: 额外的技术保障，可用率、安全、流程规范、响应时间等等
+
 
 [.topic.source]
 == No Ops, DevOps
@@ -81,25 +82,43 @@ Guide
 [.topic.source]
 == HOWTO?
 
-快速修复故障 :: 发现问题、定位问题、解决问题
+快速修复故障
+....
+发现问题
+.....
+监控，报警
+.....
+定位问题
+解决问题
+....
 
-  发现问题 :: 监控、报警
+故障发生之前
+....
+容量规划
+流程规范
+自动化
+....
 
-故障发生之前 :: 容量规划、流程规范、自动化
+故障发生之后
+....
+总结
+....
 
-故障发生之后 :: 总结
-
-其他 :: 知识管理
+知识管理
 
 
 [.topic.source]
 == Architecture
 
-.以配置管理与监控系统为核心
-.将手工执行命令转化为变更受管配置
-.审计配置变更
-.审计操作
-.工单系统
+. 以配置管理与监控系统为核心
+
+. 将手工执行命令转化为变更受管配置
+
+. 审计配置变更
+
+. 审计操作
+
+. 工单系统
 
 == !
 
