--- a/operations/index.adoc
+++ b/operations/index.adoc
@@ -19,15 +19,16 @@ Ops & No Ops
 [.topic.source]
 == Ops
 
-运维:: 
+运维
+....
 保证产品能够正确无误的运行以支持整体商业目标。
 
-运行::: 业务部署，配置管理
+运行 : 业务部署，配置管理
 
-准确无误::: 系统监控，异常检测
+准确无误 : 系统监控，异常检测
 
-支持商业目标::: 额外的技术保障，可用率、安全、流程规范、响应时间等等
-
+支持商业目标 : 额外的技术保障，可用率、安全、流程规范、响应时间等等
+....
 
 [.topic.source]
 == No Ops, DevOps
@@ -57,7 +58,7 @@ Guide
 
 .应用正常运行的时间的百分比
 
-[frame="topbot",options="header,footer",align="center"]
+[frame="topbot",options="header,footer",align="right"]
 |===
 | 可用性 | 百分比 | 年停机时间
 
@@ -85,7 +86,7 @@ Guide
 快速修复故障
 ....
 发现问题
-.....
+
 监控，报警
 .....
 定位问题
