--- a/operations/index.adoc
+++ b/operations/index.adoc
@@ -85,12 +85,9 @@ Guide
 
 快速修复故障
 ....
-发现问题
-
-监控，报警
-.....
-定位问题
-解决问题
+发现问题 -- 监控，报警
+定位问题 -- 审计
+解决问题 -- 开发、协调
 ....
 
 故障发生之前
@@ -102,7 +99,8 @@ Guide
 
 故障发生之后
 ....
-总结
+技术分析
+经验总结
 ....
 
 知识管理
@@ -111,15 +109,26 @@ Guide
 [.topic.source]
 == Architecture
 
-. 以配置管理与监控系统为核心
+以配置管理与监控系统为核心
+....
+....
 
-. 将手工执行命令转化为变更受管配置
+将手工执行命令转化为变更受管配置
 
-. 审计配置变更
+....
+....
 
-. 审计操作
 
-. 工单系统
+
+审计配置变更
+....
+....
+
+审计操作
+....
+....
+
+工单系统
 
 == !
 
